@@ -1,6 +1,8 @@
 Mahout Change Log
 
 Release 1.0 - unreleased
+  
+  MAHOUT-1415: Clone method on sparse matrices fails if there is an empty row which has not been set explicitly (till.rohrmann via ssc)
 
 Release 0.9 - 2014-02-01
 
